--- a/Angular/src/app/signUp/signUp.component.html
+++ b/Angular/src/app/signUp/signUp.component.html
@@ -1,4 +1,2 @@
 <button routerLink="/signUpVolunteer" type="button">רישום כמתנדב</button>
-
-
-<button>רישום כחולה</button>
+<button routerLink="/signUpPatient" type="button">רישום כחולה</button>
