DTO neet fix, ang about from hadar

--- a/Angular/src/app/about/about.component.html
+++ b/Angular/src/app/about/about.component.html
@@ -6,7 +6,7 @@
     </h1>
        
     <div class="signUpButton">
-        <button routerLink="signUp" class="signUpButton">להרשמה</button>
+        <button routerLink="/signUp" class="signUpButton">להרשמה</button>
       </div>
       <h1>חלק מבתי החולים שאיתם אנו מתווכים</h1>
       <div class="carousel-container">
