--- a/Angular/src/app/signUpVolunteer/sign-up-volunteer.component.html
+++ b/Angular/src/app/signUpVolunteer/sign-up-volunteer.component.html
@@ -1,4 +1,3 @@
-
 <div class="signUpVolunteer-container">
   <h2>הרשמה</h2>
 
@@ -24,18 +23,21 @@
     <!-- אזור -->
     <label>אזור:</label>
     <select formControlName="area" required>
+      <option value="">בחר אזור</option>
       <option *ngFor="let area of areas" [value]="area.key">{{ area.value }}</option>
     </select>
 
     <!-- עיר -->
     <label>עיר:</label>
     <select formControlName="city" required>
+      <option value="">בחר עיר</option>
       <option *ngFor="let city of cities" [value]="city.key">{{ city.value }}</option>
     </select>
 
     <!-- מגדר -->
     <label>מגדר:</label>
     <select formControlName="gender" required>
+      <option value="">בחר מגדר</option>
       <option *ngFor="let g of genders" [value]="g.key">{{ g.value }}</option>
     </select>
 
@@ -44,7 +46,8 @@
     <div formArrayName="availableTimes">
       <div *ngFor="let time of availableTimes.controls; let i=index" [formGroupName]="i">
         <label>יום:</label>
-        <select formControlName="day">
+        <select formControlName="day" required>
+          <option value="">בחר יום</option>
           <option value="1">ראשון</option>
           <option value="2">שני</option>
           <option value="3">שלישי</option>
@@ -55,10 +58,10 @@
         </select>
 
         <label>שעת התחלה:</label>
-        <input type="time" formControlName="startTime" />
+        <input type="time" formControlName="startTime" required />
 
         <label>שעת סיום:</label>
-        <input type="time" formControlName="endTime" />
+        <input type="time" formControlName="endTime" required />
 
         <button type="button" (click)="removeAvailableTime(i)">הסר</button>
       </div>
@@ -80,28 +83,28 @@
     <!-- העדפות גיל -->
     <label>העדפות גיל:</label>
     <select formControlName="agePreference" required>
+      <option value="">בחר העדפת גיל</option>
       <option *ngFor="let age of ageGroups" [value]="age.key">{{ age.value }}</option>
     </select>
-    
-    <!-- העדפת שפות -->
-<label>העדפת שפות:</label>
-<select formControlName="languagePreference" multiple required>
-  <option *ngFor="let lang of languages" [value]="lang.key">{{ lang.value }}</option>
-</select>
 
-<!-- העדפת מגדר -->
-<label>העדפת מגדר:</label>
-<select formControlName="genderPreference" multiple required>
-  <option *ngFor="let g of genders" [value]="g.key">{{ g.value }}</option>
-</select>
+    <!-- העדפת שפות -->
+    <label>העדפת שפות:</label>
+    <select formControlName="languagePreference" multiple required>
+      <option *ngFor="let lang of languages" [value]="lang.key">{{ lang.value }}</option>
+    </select>
+
+    <!-- העדפת מגדר -->
+    <label>העדפת מגדר:</label>
+    <select formControlName="genderPreference" multiple required>
+      <option *ngFor="let g of genders" [value]="g.key">{{ g.value }}</option>
+    </select>
+
     <!-- העדפות דת -->
     <label>העדפות דת:</label>
     <select formControlName="religiosityPreference" required>
-      <option value="1">דתיים</option>
-      <option value="2">חילוניים</option>
+      <option value="">בחר העדפת דת</option>
+      <option *ngFor="let religiosity of religiosities" [value]="religiosity.key">{{ religiosity.value }}</option>
     </select>
-
-
 
     <button type="submit" [disabled]="signUpForm.invalid">הרשם</button>
   </form>
