--- a/Angular/src/app/header/header.component.html
+++ b/Angular/src/app/header/header.component.html
@@ -14,9 +14,8 @@
   
       <!-- צד ימין - תמונת פרופיל -->
       <div class="right">
-        <img src="/profile.jpg" alt="תמונת פרופיל" class="profile-pic" />
 
-        <span class="user-status">משתמש לא מחובר</span>
+        <img src="../../assets/Empty street-cuate.png" alt="תמונת פרופיל" class="profile-pic" />
 
         <a routerLink="personalArea">
         <span class="user-status">משתמש לא מחובר</span>
