--- a/Angular/src/app/header/header.component.css
+++ b/Angular/src/app/header/header.component.css
@@ -1,5 +1,5 @@
 header {
-    background-color: #333;
+    background-color: rgba(255, 255, 255, 0.3);
     padding: 10px 20px;
     display: flex;
     justify-content: space-between;
